fixing wrapping of task types text

--- a/jquery.flowchart.css
+++ b/jquery.flowchart.css
@@ -131,7 +131,6 @@
     height: auto;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
     cursor: move;
 }
 
